--- a/index.html
+++ b/index.html
@@ -14,12 +14,14 @@
 
   gtag('config', 'UA-126656052-1');
 </script>
+
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <script>
   (adsbygoogle = window.adsbygoogle || []).push({
     google_ad_client: "ca-pub-7391803881538428",
     enable_page_level_ads: true
   });
+</script>
 </script>
         <style>
            
