--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   });
 </script>
 </script>
+<link rel="shortcut icon" href="http://tictactoeplay.ga/ico.png" type="image/x-icon" />
         <style>
            
                     
