correct site name

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   });
 </script>
 </script>
-<link rel="shortcut icon" href="http://tictactoeplay.ga/ico.png" type="image/x-icon" />
+<link rel="shortcut icon" href="http://arihant3112.github.io/ico.png" type="image/x-icon" />
         <style>
            
                     
