--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
             Tic Tac Toe
         </title>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<meta name="google-site-verification" content="ZI8KvjcSip58kHSKXMvYxBwcCYVC9MrsDCVe9Uk1yf8" />
         <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-126656052-1"></script>
 <script>
