--- a/index.html
+++ b/index.html
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
 <html>
     <head>
+<meta charset="UTF-8">
         <title>
-            Tic Tac Toe
+            Tic Tac Toe - Play Tic-Tac-Toe online for free
         </title>
+<meta name="description" content="Play the Tic-Tac-Toe game online for free with computer or two players.">
+<meta name="author" content="Arihant">
+<meta name="keywords" content="play,enjoy,fun,AI,friend,computer,noughts and crosses,game,childhood,expert,unbeatable,Artificial Intelligence,online,web,internet">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="application-name" content="Tic-Tac-Toe">
+		<meta name="msapplication-tooltip" content="Tic-Tac-Toe">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <meta name="google-site-verification" content="ZI8KvjcSip58kHSKXMvYxBwcCYVC9MrsDCVe9Uk1yf8" />
         <!-- Global site tag (gtag.js) - Google Analytics -->
