--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <meta name="keywords" content="play,enjoy,fun,AI,friend,computer,noughts and crosses,game,childhood,expert,unbeatable,Artificial Intelligence,online,web,internet">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="application-name" content="Tic-Tac-Toe">
-		<meta name="msapplication-tooltip" content="Tic-Tac-Toe">
+<meta name="msapplication-tooltip" content="Tic-Tac-Toe">
+<meta name="theme-color" content="#33D7FF">
+<meta property="og:type" content="website">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <meta name="google-site-verification" content="ZI8KvjcSip58kHSKXMvYxBwcCYVC9MrsDCVe9Uk1yf8" />
         <!-- Global site tag (gtag.js) - Google Analytics -->
