adding fomo ads

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
   });
 </script>
 </script>
+<script type="text/javascript" src="https://load.fomo.com/ads/load.js?id=0jEmTnPq1WamC-iGOJPYig" async></script>
 <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
 <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
 <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
