--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>
             Tic Tac Toe - Play Tic-Tac-Toe online for free
         </title>
+<script data-cfasync='false' type='text/javascript' src='//p319159.clksite.com/adServe/banners?tid=319159_621732_0&type=footer&size=37'></script>
 <script type="text/javascript"> var infolinks_pid = 3135234; var infolinks_wsid = 0; </script> <script type="text/javascript" src="//resources.infolinks.com/js/infolinks_main.js"></script>
 <meta name="description" content="Play the Tic-Tac-Toe game online for free with computer or two players.">
 <meta name="author" content="Arihant">
